gitops/okd-console/console.yaml
---
# apiVersion: rbac.authorization.k8s.io/v1
# kind: ClusterRole
# metadata:
#   name: cluster-viewer
# rules:
# - apiGroups:
#   - '*'
#   resources:
#   - '*'
#   verbs:
#   - get
#   - list
#   - watch
# - apiGroups:
#   - ''
#   resources:
#   - 'pods'
#   verbs:
#   - get
#   - list
#   - watch
#   - update
#   - delete
# - apiGroups:
#   - ''
#   resources:
#   - 'deployments'
#   - 'statefulsets'
#   verbs:
#   - get
#   - list
#   - watch
#   - update
#   - scale
# - nonResourceURLs:
#   - '*'
#   verbs:
#   - get
#   - list
#   - watch

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: okd-console
  labels:
    app: console
spec:
  replicas: 1
  selector:
    matchLabels:
      app: console
  template:
    metadata:
      labels:
        app: console
    spec:
      containers:
        - name: console-app
          image: "quay.io/openshift/origin-console:5.1"
---
kind: Service
apiVersion: v1
metadata:
  name: okd-console
spec:
  selector:
    app: console
  type: ClusterIP
  ports:
    - name: http
      port: 9000
      targetPort: 9000
      protocol: TCP

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: okd-console
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod-cloudflare-dns
spec:
  tls:
  - hosts:
      - prod-console.buc.sh
    secretName: cert-prod-console-buc-sh
  rules:
  - host: prod-console.buc.sh
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: okd-console
            port:
              number: 9000

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: okd-console-http
spec:
  rules:
  - host: prod-console.10.0.0.21.nip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: okd-console
            port:
              number: 9000
